--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,35 @@ util/__pycache__/read_excel.cpython-36.pyc
 util/__pycache__/set_date_util.cpython-36.pyc
 util/__pycache__/setDate_util.cpython-36.pyc
 util/__pycache__/voucher_check_util.cpython-36.pyc
+__pycache__/comp_info.cpython-36.pyc
+test_case/external/__pycache__/enter_comp_spec.cpython-36.pyc
+test_case/external/create_comp/__pycache__/create_comp_page.cpython-36.pyc
+test_case/external/create_comp/__pycache__/create_comp_spec.cpython-36.pyc
+test_case/external/user_setting/__pycache__/user_setting_elem.cpython-36.pyc
+test_case/external/user_setting/__pycache__/user_setting_page.cpython-36.pyc
+test_case/external/user_setting/__pycache__/user_setting_spec.cpython-36.pyc
+test_case/login/__pycache__/login_elem.cpython-36.pyc
+test_case/login/__pycache__/login_page.cpython-36.pyc
+test_case/login/__pycache__/login_spec.cpython-36.pyc
+test_case/salary/__pycache__/salary_elem.cpython-36.pyc
+test_case/salary/__pycache__/salary_page.cpython-36.pyc
+test_case/salary/add_stuff/__pycache__/add_stuff_elem.cpython-36.pyc
+test_case/salary/add_stuff/__pycache__/add_stuff_page.cpython-36.pyc
+test_case/salary/add_stuff/__pycache__/add_stuff_spec.cpython-36.pyc
+test_case/setting/__pycache__/setting_elem.cpython-36.pyc
+test_case/setting/__pycache__/setting_page.cpython-36.pyc
+test_case/setting/__pycache__/setting_spec.cpython-36.pyc
+test_case/setting/comp_billing/__pycache__/comp_billing_elem.cpython-36.pyc
+test_case/setting/contact/__pycache__/contact_elem.cpython-36.pyc
+test_case/setting/contact/__pycache__/contact_page.cpython-36.pyc
+test_case/setting/contact/__pycache__/contact_spec.cpython-36.pyc
+test_data/cai/__pycache__/add_stuff_data.cpython-36.pyc
+test_data/cai/__pycache__/comp_billing_data.cpython-36.pyc
+test_data/cai/__pycache__/login_data.cpython-36.pyc
+util/__pycache__/__init__.cpython-36.pyc
+util/__pycache__/alert_page.cpython-36.pyc
+util/__pycache__/danger_page.cpython-36.pyc
+util/__pycache__/enter_comp_page.cpython-36.pyc
+util/__pycache__/jsonToPython_util.cpython-36.pyc
+util/__pycache__/public_page.cpython-36.pyc
+util/__pycache__/read_excel.cpython-36.pyc
